--- a/src/App.module.css
+++ b/src/App.module.css
@@ -3,27 +3,28 @@
 *::after {
   box-sizing: border-box;
 }
-
-.general {
+.container {
   width: 400px;
   margin: 0 auto;
 }
 
+.btn {
+  border-radius: 7px;
+  padding :0.5rem;
+  margin: 0 2px 1px 2px;
+}
+
+
 .form {
-  background-color: rgb(41, 67, 72);
-  color: white;
   padding: 5px;
-  border-radius: 0.5em;
 }
 
 .board {
   display: grid;
   gap: 1.5rem;
   grid-template-columns: repeat(3);
-  background-color: whitesmoke;
-  color: rgb(201, 145, 62);
 }
-
+ul,
 li {
   list-style: none;
 }
@@ -31,4 +32,9 @@ li {
   display: grid;
   gap: 1rem;
   margin: 0 auto;
+}
+
+input[type="text"] {
+  border-radius: 0.5rem;
+  padding :0.5rem;
 }
