--- a/src/component/EnteredItem.module.css
+++ b/src/component/EnteredItem.module.css
@@ -1,12 +1,11 @@
-.todoitem {
-  background-color: white;
-}
 
-.btn {
-  color: beige;
-  background-color: rgb(168, 74, 74);
-}
 
 .nested_div {
   padding: 10px;
+}
+
+.btn {
+  border-radius: 7px;
+  padding :0.5rem;
+  margin: 0 2px 1px 2px;;
 }
