--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,40 +1,152 @@
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-}
-.container {
-  width: 400px;
-  margin: 0 auto;
-}
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
 
-.btn {
-  border-radius: 7px;
-  padding :0.5rem;
-  margin: 0 2px 1px 2px;
-}
-
-
-.form {
-  padding: 5px;
-}
-
-.board {
-  display: grid;
-  gap: 1.5rem;
-  grid-template-columns: repeat(3);
-}
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
 ul,
-li {
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
+}
+body {
+  line-height: 1;
+}
+ol,
+ul {
   list-style: none;
 }
-.columns {
+blockquote,
+q {
+  quotes: none;
+}
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: "";
+  content: none;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+.main {
   display: grid;
-  gap: 1rem;
-  margin: 0 auto;
+  gap: 24px;
+  max-width: min(60%, 1000px);
+  margin-inline: auto;
+  text-align: center;
+  padding-block: 64px;
+  /* height: ; */
+}
+.logo {
+  font-size: 24px;
+}
+input[type="text"] {
+  width: 500px;
 }
 
-input[type="text"] {
-  border-radius: 0.5rem;
-  padding :0.5rem;
+.addTodo{
+	display: flex;
+	justify-content: space-between;
+}
+.todo {
+  padding: 8px;
 }
