--- a/src/component/EnteredItem.module.css
+++ b/src/component/EnteredItem.module.css
@@ -1,11 +1,23 @@
-
-
-.nested_div {
-  padding: 10px;
+.todoItem{
+  display: flex;
+  justify-content: space-between;
+  padding: 8px;
+  margin: 8px;
+  gap: 4px;
+  align-items: center;
 }
 
-.btn {
-  border-radius: 7px;
-  padding :0.5rem;
-  margin: 0 2px 1px 2px;;
+.content{
+  display: flex;
+  justify-items: flex-start;
+  gap: 8px;
+}
+
+.editButton{
+  display: flex;
+  padding: 8px;
+}
+
+input[type="text"] {
+  width: 500px;
 }
