--- a/src/App.module.css
+++ b/src/App.module.css
@@ -107,6 +107,7 @@ section {
 }
 body {
   line-height: 1;
+  background-color: #2a9d8f;
 }
 ol,
 ul {
@@ -134,19 +135,49 @@ table {
   margin-inline: auto;
   text-align: center;
   padding-block: 64px;
-  /* height: ; */
 }
 .logo {
   font-size: 24px;
+  font-family: Georgia, "Times New Roman", Times, serif;
+  color: antiquewhite;
 }
 input[type="text"] {
+  margin: 0 12px;
   width: 500px;
+  padding: 8px;
+  border: none; 
 }
 
-.addTodo{
-	display: flex;
-	justify-content: space-between;
-}
-.todo {
+.addTodo {
+  background-color: lightblue;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   padding: 8px;
+  gap: 8px;
+}
+
+.todo {
+  gap: 8px;
+  /* min-height: 300px; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#newTodo {
+  display: flex;
+  justify-content: space-between;
+  padding: 8px;
+}
+
+button {
+  background-color: #f4a261;
+  width: 100px;
+  text-align: center;
+  padding: 0 25px;
+  border-radius: 6px;
+  height: 44px;
+  border: none;
+  font-weight: 200;
 }
